--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.58.0",
     "tailwind-merge": "^3.3.1",
-    "zod": "^3.25.65"
+    "zod": "^3.25.65",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
