--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/vite": "^4.1.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "gsap": "^3.13.0",
     "lucide-react": "^0.516.0",
     "openai": "^5.3.0",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@tailwindcss/postcss": "^4.1.10",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^24.0.3",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
