--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.58.0",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.65",
     "zustand": "^5.0.5"
