--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-react-tailwind",
+  "name": "quizify",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,7 +9,10 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test": "vitest",
+    "test:unit": "vitest --project unit",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
@@ -43,6 +46,8 @@
     "@storybook/addon-vitest": "^9.0.16",
     "@storybook/react-vite": "^9.0.16",
     "@tailwindcss/postcss": "^4.1.10",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@types/crypto-js": "^4.2.2",
     "@types/node": "^24.0.3",
     "@types/react": "^18.3.12",
@@ -50,11 +55,13 @@
     "@vitejs/plugin-react-swc": "^3.5.0",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "3.2.4",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "eslint-plugin-storybook": "^9.0.16",
     "globals": "^15.11.0",
+    "jsdom": "^26.1.0",
     "playwright": "^1.54.1",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
