--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "build-storybook": "storybook build",
     "test": "vitest",
     "test:unit": "vitest --project unit",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
@@ -60,6 +62,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "eslint-plugin-storybook": "^9.0.16",
+    "gh-pages": "^6.3.0",
     "globals": "^15.11.0",
     "jsdom": "^26.1.0",
     "playwright": "^1.54.1",
